# allomancy

./: .gitattributes  .gitignore  Cargo.toml  Cross.toml  README.md  flake.nix  rust-toolchain.toml  shell.nix
.github/workflows/: rust.yml  test.yml
embedded-hal-ext/: Cargo.toml  README.md
embedded-hal-ext/src/: digital.rs  lib.rs
graphmemes/: Cargo.toml  README.md
graphmemes/benches/: chars.rs  performance.rs
graphmemes/src/: error.rs  grapheme.rs  iter.rs  lib.rs
project/: embedded-hal-ext.md  raspi-hal.md
project_notes/: embedded-hal-ext.md  raspi-hal.md
raspi-hal/: Cargo.toml  README.md
raspi-hal-procmacros/: Cargo.toml
raspi-hal-procmacros/src/: lib.rs
raspi-hal/src/: gpio.rs  lib.rs  macros.rs  peripheral.rs
raspi-hal/src/chip/: mod.rs
raspi-hal/src/chip/ioctl/: errors.rs  ffi.rs  mod.rs
raspi-hal/src/chip/pi4/: gpio.rs  gpiomem.rs  mod.rs
raspi-hal/src/chip/pi5/: gpiomem.rs  mod.rs
xtask/: Cargo.toml  lib.rs  main.rs
