[package]
name = "embedded-hal-ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
defmt = ["dep:defmt", "nb/defmt-0-3", "embedded-hal/defmt-03"]
async = ["dep:embedded-hal-async"]

[dependencies]
nb = { version = "1.1", default-features = false }
defmt = { version = "0.3", optional = true }
embedded-hal = { version = "1", default-features = false }
embedded-hal-async = { version = "1", optional = true }

[dev-dependencies]