[package]
name = "embedded-hal-ext"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
defmt-03 = ["dep:defmt-03", "nb/defmt-0-3", "embedded-hal/defmt-03"]
async = ["dep:embedded-hal-async"]

[dependencies]
nb = { version = "1.1", default-features = false }
defmt-03 = { package = "defmt", version = "0.3", optional = true }
embedded-hal = { version = "1", default-features = false }
embedded-hal-async = { version = "1", optional = true }
heapless = { version = "0.8.0" }

[dev-dependencies]