[package]
name         = "raspi-hal-procmacros"
version      = "0.1.0"
edition      = "2021"
rust-version = "1.76.0"
description  = "Procedural macros for raspi-hal"
repository   = "https://github.com/Net"
license      = "MIT OR Apache-2.0"


[lib]
proc-macro = true

[dependencies]
darling           = "0.20.5"
document-features = "0.2.8"
litrs             = "0.4.1"
object            = { version = "0.32.2", optional = true }
proc-macro-crate  = "3.1.0"
proc-macro-error  = "1.0.4"
proc-macro2       = "1.0.78"
quote             = "1.0.35"
syn               = { version = "2.0.48", features = ["extra-traits", "full"] }
embedded-hal-ext  = { version = "*", path = "../embedded-hal-ext" }

[features]
## Provide enum dispatch helpers.
enum-dispatch = []