[package]
name = "raspi-hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["async", "pi5"]
async = ["dep:embedded-hal-async", "gpio-cdev/async-tokio"]
pi5 = []
pi4 = []
pi3 = []
pi_zero = []

[dependencies]
nb = { version = "1.1", default-features = false }
embedded-hal = { version = "1", default-features = false }
embedded-hal-async = { version = "1", optional = true }
# embedded-hal crate based on linux apis. Kinda awkward.
gpio-cdev = { version = "0.6.0" }
#linux-embedded-hal = "0.4"
# Pi-specific HAL crate. Has some weird limitations. Might end up forking this or just building own impl.
#rppal = { version = "0.17", features = ["embedded-hal-nb"] }
embedded-hal-ext = { version = "*", path = "../embedded-hal-ext"}
thiserror = { version = "1.0" }

procmacros = { version = "*", features = ["enum-dispatch"], package = "raspi-hal-procmacros", path = "../raspi-hal-procmacros" }
strum = { version = "0.26", features = ["derive"] }
paste = "1.0.14"
heapless = { version = "0.8.0" }

bitflags = "2.4"
libc = "0.2"